# Rubik_sCubeSolver

./: CMakeLists.txt  README.markdown  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
PatternDatabases/: CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
